# vless-shopbot

./: .dockerignore  .gitignore  README.md  check_and_create_key.py  check_key_ownership.py  cookies.txt  final_verify.py  full_referral_test.py  handlers.py  install.sh  payment_test.py  run_async_bonus.py  simulate_registration.py  users.db  verify_referral_system.py
.github/workflows/: ci.yml
ChronoLog/: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
ChronoLog/.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
ChronoLog/app/: main.py
ChronoLog/web/: package.json
ChronoLog/web/src/: App.tsx
src/shop_bot/: config.py  users.db
src/shop_bot/bot/: handlers.py  keyboards.py
src/shop_bot/data_manager/: database.py
src/shop_bot/webhook_server/: app.py
src/shop_bot/webhook_server/templates/: dashboard.html  settings.html  user_profile.html  users.html
